ci: update api get products

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BE=http://localhost:8080/api/v1
+NEXT_PUBLIC_BE=http://localhost:3001/api/v1/service
 # NEXT_PUBLIC_BE=http://localhost:8080
