--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@mui/material": "^5.11.1",
     "@mui/x-data-grid": "^5.17.17",
     "@next/bundle-analyzer": "^13.1.2",
-    "@next/font": "^13.1.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,23 +19,21 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.1",
     "chart.js": "^4.1.1",
+    "clsx": "^2.0.0",
     "cookies-next": "^2.1.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.15.0",
     "i18next": "^22.4.9",
     "next": "^13.1.1",
-    "next-seo": "^5.15.0",
+    "next-seo": "^6.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
-    "react-messenger-customer-chat": "^0.8.0",
-    "react-pro-sidebar": "^0.7.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-scroll-motion": "^0.3.2",
     "react-toastify": "^9.0.4",
-    "react-xls": "^0.1.1",
     "redux-saga": "^1.2.2",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.0"
