--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_BE=http://localhost:3001/api/v1/service
+# NEXT_PUBLIC_BE=http://localhost:3001/api/v1/service
+NEXT_PUBLIC_BE=https://ecommerce-shop-be-lysd.onrender.com/api/v1/
 # NEXT_PUBLIC_BE=http://localhost:8080
