--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "react-ecommerce-web-shop",
   "version": "0.1.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "prod": "next build && next start",
+    "analyze": "ANALYZE=true next build",
+    "deploy": "react-scripts build && gh-pages -d build",
+    "reinstall-ds": "rm -rf ./node_modules/my-package && npm cache clean pacote:tarball:file:react-typescript-hooks-1.3.3.tgz && npm install my-package"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -23,6 +32,7 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.15.0",
     "i18next": "^22.4.9",
+    "my-package": "file:react-typescript-hooks-1.3.3.tgz",
     "next": "^13.1.1",
     "next-seo": "^6.1.0",
     "react": "^18.2.0",
@@ -30,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
     "react-pro-sidebar": "^0.7.1",
+    "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-scroll-motion": "^0.3.2",
@@ -37,14 +48,6 @@
     "redux-saga": "^1.2.2",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.0"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "prod": "next build && next start",
-    "analyze": "ANALYZE=true next build",
-    "deploy": "react-scripts build && gh-pages -d build"
   },
   "browserslist": {
     "production": [
