--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.2.1",
     "chart.js": "^4.1.1",
     "clsx": "^2.0.0",
+    "convenience-core": "^1.4.0",
     "cookies-next": "^2.1.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.15.0",
