--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-data-grid": "^5.17.17",
     "@next/bundle-analyzer": "^13.1.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -43,6 +44,7 @@
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-pro-sidebar": "^0.7.1",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
