--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.15.0",
     "i18next": "^22.4.9",
+    "js-cookie": "^3.0.5",
     "my-package": "file:react-typescript-hooks-1.3.3.tgz",
     "next": "^13.1.1",
     "next-seo": "^6.1.0",
@@ -69,6 +70,7 @@
   },
   "devDependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@types/js-cookie": "^3.0.4",
     "@types/react-helmet": "^6.1.6",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
