--- a/package.json
+++ b/package.json
@@ -15,25 +15,18 @@
     "lint": "yarn lint:format && yarn lint:fix"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@mui/x-data-grid": "^5.17.17",
     "@next/bundle-analyzer": "^13.1.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.1",
     "chart.js": "^4.1.1",
     "clsx": "^2.0.0",
-    "cookies-next": "^2.1.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.15.0",
     "i18next": "^22.4.9",
@@ -45,16 +38,13 @@
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-pro-sidebar": "^0.7.1",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
-    "react-scroll-motion": "^0.3.2",
     "react-toastify": "^9.0.4",
     "redux-saga": "^1.2.2",
-    "typescript": "^4.9.4",
-    "web-vitals": "^3.1.0"
+    "typescript": "^4.9.4"
   },
   "browserslist": {
     "production": [
@@ -79,11 +69,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
-    "prettier": "^3.0.3",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "react-hook-form": "^7.41.1",
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
