--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lint": "yarn lint:format && yarn lint:fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@mui/x-data-grid": "^5.17.17",
@@ -73,8 +75,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.4",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.4.0",
     "react-hook-form": "^7.41.1",
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
