--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -93,7 +93,7 @@
       "warn",
       {
         "selector": "default",
-        "format": ["camelCase"],
+        "format": ["camelCase", "PascalCase", "UPPER_CASE", "snake_case"],
         "leadingUnderscore": "allow"
       },
       {
