--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "analyze": "ANALYZE=true next build",
     "deploy": "react-scripts build && gh-pages -d build",
     "reinstall-ds": "rm -rf ./node_modules/my-package && npm cache clean pacote:tarball:file:react-typescript-hooks-1.3.3.tgz && npm install my-package",
-    "reinstall": "rm -rf ./node_modules/my-package && rm -rf package-lock.json && npm cache clean pacote:tarball:file:react-typescript-hooks-1.3.3.tgz && npm instal",
+    "reinstall": "rm -rf node_modules && rm -rf package-lock.json && npm instal",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,md,json}\" ",
     "lint": "yarn lint:format && yarn lint:fix"
